tests/baselines/reference/unterminatedRegexAtEndOfSource1.errors.txt
unterminatedRegexAtEndOfSource1.ts(1,9): error TS1161: Unterminated regular expression literal.


==== unterminatedRegexAtEndOfSource1.ts (1 errors) ====
    var a = /
            ~
!!! error TS1161: Unterminated regular expression literal.